--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects</title>
-  <link href="../src/output.css" rel="stylesheet">
+  <link href="src/output.css" rel="stylesheet">
 </head>
 <body class="text-slate-100 flex flex-col min-h-screen">
 
