--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects</title>
-  <link href="src/output.css" rel="stylesheet">
+  <link href="../myWebsite/src/output.css" rel="stylesheet">
 </head>
 <body class="text-slate-100 flex flex-col min-h-screen">
 
@@ -122,7 +122,7 @@
 
     <!-- CTA -->
     <section class="text-center">
-      <a href="./pages/contact.html"
+      <a href="../myWebsite/pages/contact.html"
         class="inline-block px-6 py-3 rounded-full text-sm font-medium border border-blue-950 bg-blue-600 text-white hover:bg-blue-950 hover:shadow-md hover:shadow-blue-600 transition-all">
         Get in Touch
       </a>
