--- a/navbar.html
+++ b/navbar.html
@@ -2,8 +2,8 @@
   <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
 
     <!-- Logo -->
-    <a href="/index.html" class="flex items-center gap-2 rounded-full">
-    <img src="../assets/logo.png"
+    <a href="index.html" class="flex items-center gap-2 rounded-full">
+    <img src="assets/logo.png"
      alt="Logo"
      class="h-10 w-10 object-cover rounded-full" />
       <span class="text-balance font-semibold tracking-wide text-white/80">Portfolio</span>
@@ -11,9 +11,9 @@
 
     <!-- Desktop links -->
     <div class="hidden sm:flex items-center gap-6 text-sm text-gray-300">
-      <a href="../myWebsite/index.html" class="hover:text-white">Home</a>
-      <a href="../myWebsite/pages/projects.html" class="hover:text-white">Projects</a>
-      <a href="../myWebsite/pages/contact.html" class="hover:text-white">Contact</a>
+      <a href="index.html" class="hover:text-white">Home</a>
+      <a href="pages/projects.html" class="hover:text-white">Projects</a>
+      <a href="pages/contact.html" class="hover:text-white">Contact</a>
     </div>
 
     <!-- Mobile menu button -->
@@ -26,9 +26,9 @@
   <!-- Mobile dropdown -->
   <div id="mobileMenu"
        class="sm:hidden hidden flex-col gap-4 px-6 py-4 bg-slate-900/90 border-t border-white/10 text-gray-200 text-sm backdrop-blur-xl">
-    <a href="../myWebsite/index.html" class="hover:text-white">Home</a>
-    <a href="../myWebsite/pages/projects.html" class="hover:text-white">Projects</a>
-    <a href="../myWebsite/pages/contact.html" class="hover:text-white">Contact</a>
+    <a href="index.html" class="hover:text-white">Home</a>
+    <a href="pages/projects.html" class="hover:text-white">Projects</a>
+    <a href="pages/contact.html" class="hover:text-white">Contact</a>
   </div>
 </nav>
 
