--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navbar (shared across pages) -->
 <div id="navbar"></div>
 <script>
-  fetch("navbar.html")
+  fetch("/myWebsite/navbar.html")
     .then(res => res.text())
     .then(html => {
       document.getElementById("navbar").innerHTML = html;
@@ -20,7 +20,7 @@
   <!-- Auto‑injected background blobs -->
   <div id="blobs"></div>
   <script>
-    fetch("blobs.html")
+    fetch("/myWebsite/blobs.html")
       .then(res => res.text())
       .then(html => {
         document.getElementById("blobs").innerHTML = html;
@@ -122,7 +122,7 @@
 
     <!-- CTA -->
     <section class="text-center">
-      <a href="pages/contact.html"
+      <a href="/myWebsite/pages/contact.html"
         class="inline-block px-6 py-3 rounded-full text-sm font-medium border border-blue-950 bg-blue-600 text-white hover:bg-blue-950 hover:shadow-md hover:shadow-blue-600 transition-all">
         Get in Touch
       </a>
