--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-slate-950">
 <head>
    <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects</title>
   <link href="src/output.css" rel="stylesheet">
 </head>
-<body class="text-slate-100 flex flex-col min-h-screen">
+<body class="bg-slate-950 text-slate-100 flex flex-col min-h-screen">
 
   <!-- Navbar (shared across pages) -->
 <div id="navbar"></div>
