--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-slate-950">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Contact</title>
   <link href="../src/output.css" rel="stylesheet">
 </head>
