--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-slate-950 min-h-screen">
+<html lang="en" class="bg-slate-950 min-h-screen" style="padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom); background-color:#020617;">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
