Changed layout a little.

--- a/index.html
+++ b/index.html
@@ -32,33 +32,12 @@
 
     <!-- Intro Header -->
     <section class="text-center space-y-3">
-      <h2 class="text-2xl font-semibold text-white text-center">About Me</h2>
-      <h1 class="text-4xl sm:text-5xl font-semibold text-white">I build clean and modern web experiences.</h1>
+      <h1 class="text-4xl sm:text-5xl font-semibold text-white">About Me</h1>
       <p class="text-gray-300 text-sm sm:text-base max-w-2xl mx-auto">
         I'm Michael, a developer and designer from Ireland. I specialize in crafting modern, fast, 
             and interactive interfaces using tools like TailwindCSS, JavaScript, and component-driven layouts.
       </p>
     </section>
-
-
-    <!-- Who I Am -->
-    <section>
-      <div class="relative rounded-3xl border border-white/15 bg-white/5 backdrop-blur-2xl px-8 py-10 shadow-[0_0_60px_rgba(15,23,42,0.9)]">
-        <div class="absolute inset-0 rounded-3xl border border-white/10 opacity-60"></div>
-        <div class="relative z-10 space-y-4">
-          <h2 class="text-2xl font-semibold text-white">Who I Am</h2>
-          <p class="text-gray-300 leading-relaxed text-sm sm:text-base">
-            I'm Michael, a developer and designer from Ireland. I specialize in crafting modern, fast, 
-            and interactive interfaces using tools like TailwindCSS, JavaScript, and component-driven layouts.
-          </p>
-          <p class="text-gray-300 leading-relaxed text-sm sm:text-base">
-            I enjoy taking an idea — even a rough one — and shaping it into a clean, usable, 
-            polished experience. My focus is on clarity, responsiveness, and a great user feel.
-          </p>
-        </div>
-      </div>
-    </section>
-
 
     <!-- Skills -->
     <section class="space-y-6">
@@ -73,7 +52,6 @@
         <div class="bg-white/5 border border-white/10 backdrop-blur-xl rounded-xl py-4">Prototyping</div>
       </div>
     </section>
-
 
     <!-- What I Do Cards -->
     <section>
@@ -106,7 +84,6 @@
       </div>
     </section>
 
-
     <!-- Current Work -->
     <section>
       <div class="rounded-3xl border border-white/15 bg-white/5 backdrop-blur-2xl px-8 py-10 shadow-[0_0_60px_rgba(15,23,42,0.9)] space-y-4">
@@ -119,7 +96,6 @@
       </div>
     </section>
 
-
     <!-- CTA -->
     <section class="text-center">
       <a href="/myWebsite/pages/contact.html"
@@ -129,6 +105,5 @@
     </section>
 
   </main>
-
 </body>
 </html>
