--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="bg-slate-950 min-h-screen" style="padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom); background-color:#020617;">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects</title>
   <link href="src/output.css" rel="stylesheet">
 </head>
-<body class="bg-slate-950 text-slate-100 flex flex-col min-h-screen">
+<body class="text-slate-100 flex flex-col min-h-screen">
 
   <!-- Navbar (shared across pages) -->
 <div id="navbar"></div>
@@ -32,12 +32,33 @@
 
     <!-- Intro Header -->
     <section class="text-center space-y-3">
-      <h1 class="text-4xl sm:text-5xl font-semibold text-white">About Me</h1>
+      <h2 class="text-2xl font-semibold text-white text-center">About Me</h2>
+      <h1 class="text-4xl sm:text-5xl font-semibold text-white">I build clean and modern web experiences.</h1>
       <p class="text-gray-300 text-sm sm:text-base max-w-2xl mx-auto">
         I'm Michael, a developer and designer from Ireland. I specialize in crafting modern, fast, 
             and interactive interfaces using tools like TailwindCSS, JavaScript, and component-driven layouts.
       </p>
     </section>
+
+
+    <!-- Who I Am -->
+    <section>
+      <div class="relative rounded-3xl border border-white/15 bg-white/5 backdrop-blur-2xl px-8 py-10 shadow-[0_0_60px_rgba(15,23,42,0.9)]">
+        <div class="absolute inset-0 rounded-3xl border border-white/10 opacity-60"></div>
+        <div class="relative z-10 space-y-4">
+          <h2 class="text-2xl font-semibold text-white">Who I Am</h2>
+          <p class="text-gray-300 leading-relaxed text-sm sm:text-base">
+            I'm Michael, a developer and designer from Ireland. I specialize in crafting modern, fast, 
+            and interactive interfaces using tools like TailwindCSS, JavaScript, and component-driven layouts.
+          </p>
+          <p class="text-gray-300 leading-relaxed text-sm sm:text-base">
+            I enjoy taking an idea — even a rough one — and shaping it into a clean, usable, 
+            polished experience. My focus is on clarity, responsiveness, and a great user feel.
+          </p>
+        </div>
+      </div>
+    </section>
+
 
     <!-- Skills -->
     <section class="space-y-6">
@@ -52,6 +73,7 @@
         <div class="bg-white/5 border border-white/10 backdrop-blur-xl rounded-xl py-4">Prototyping</div>
       </div>
     </section>
+
 
     <!-- What I Do Cards -->
     <section>
@@ -84,6 +106,7 @@
       </div>
     </section>
 
+
     <!-- Current Work -->
     <section>
       <div class="rounded-3xl border border-white/15 bg-white/5 backdrop-blur-2xl px-8 py-10 shadow-[0_0_60px_rgba(15,23,42,0.9)] space-y-4">
@@ -96,6 +119,7 @@
       </div>
     </section>
 
+
     <!-- CTA -->
     <section class="text-center">
       <a href="/myWebsite/pages/contact.html"
@@ -105,5 +129,6 @@
     </section>
 
   </main>
+
 </body>
 </html>
