--- a/index.html
+++ b/index.html
@@ -30,17 +30,6 @@
   <!-- PAGE CONTENT -->
   <main class="relative min-h-screen px-4 pt-28 pb-24 mx-auto max-w-4xl space-y-20">
 
-    <!-- Intro Header -->
-    <section class="text-center space-y-3">
-      <h2 class="text-2xl font-semibold text-white text-center">About Me</h2>
-      <h1 class="text-4xl sm:text-5xl font-semibold text-white">I build clean and modern web experiences.</h1>
-      <p class="text-gray-300 text-sm sm:text-base max-w-2xl mx-auto">
-        I'm Michael, a developer and designer from Ireland. I specialize in crafting modern, fast, 
-            and interactive interfaces using tools like TailwindCSS, JavaScript, and component-driven layouts.
-      </p>
-    </section>
-
-
     <!-- Who I Am -->
     <section>
       <div class="relative rounded-3xl border border-white/15 bg-white/5 backdrop-blur-2xl px-8 py-10 shadow-[0_0_60px_rgba(15,23,42,0.9)]">
@@ -48,7 +37,7 @@
         <div class="relative z-10 space-y-4">
           <h2 class="text-2xl font-semibold text-white">Who I Am</h2>
           <p class="text-gray-300 leading-relaxed text-sm sm:text-base">
-            I'm Michael, a developer and designer from Ireland. I specialize in crafting modern, fast, 
+            I'm Michael, a developer and designer from Ballina, Co. Mayo in Ireland. I specialize in crafting modern, fast, 
             and interactive interfaces using tools like TailwindCSS, JavaScript, and component-driven layouts.
           </p>
           <p class="text-gray-300 leading-relaxed text-sm sm:text-base">
