--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- CTA -->
     <section class="text-center">
       <a href="/myWebsite/pages/contact.html"
-        class="inline-block px-6 py-3 rounded-full text-sm font-medium border border-blue-950 bg-blue-600 text-white hover:bg-blue-950 hover:shadow-md hover:shadow-blue-600 transition-all">
+        class="rounded-3xl border border-white/15 bg-white/5 backdrop-blur-2xl px-6 py-4 text-white text-sm font-medium inline-block shadow-[0_0_60px_rgba(15,23,42,0.9)] hover:bg-white/10 transition-all">
         Get in Touch
       </a>
     </section>
